plugins {
    alias(libs.plugins.android.application)
}

android {
    namespace 'ga.jundbits.clock_in_clock_out'
    compileSdk {
        version = release(36)
    }

    defaultConfig {
        applicationId "ga.jundbits.clock_in_clock_out"
        minSdk 24
        targetSdk 36
        versionCode 2
        versionName "1.1"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }
}

dependencies {
    implementation libs.appcompat
    implementation libs.material
    implementation libs.activity
    implementation libs.constraintlayout
    implementation libs.codescanner
    implementation libs.qrGenerator
    implementation libs.gson
    testImplementation libs.junit
    androidTestImplementation libs.ext.junit
    androidTestImplementation libs.espresso.core
}